--- a/SwashbucklerDiary/Components/MyComponents/MySearch.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MySearch.razor
@@ -19,6 +19,7 @@ else
                 Autofocus="true"
                 Clearable="true"
                 HideDetails="@("auto")"
+                Color="@TextFieldColor"
                 spellcheck="false"
                 Placeholder="@(Placeholder ?? I18n.T("Search.Please enter keywords"))">
     </MTextField>
