🐛 fix(IndexPage): Count update not timely

--- a/SwashbucklerDiary/Pages/Index/IndexHistory/IndexHistory.razor
+++ b/SwashbucklerDiary/Pages/Index/IndexHistory/IndexHistory.razor
@@ -1,5 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Pages
-@inherits ImportantComponentBase
+@inherits IndexPageCompentBase
 
 <MyAppBar>
     @if (NormalCalendarVisible)
