--- a/SwashbucklerDiary/Pages/Index/IndexMine.razor
+++ b/SwashbucklerDiary/Pages/Index/IndexMine.razor
@@ -1,6 +1,6 @@
 ﻿@using SwashbucklerDiary.Models
 @namespace SwashbucklerDiary.Pages
-@inherits ImportantComponentBase
+@inherits IndexPageCompentBase
 
 <MyAppBar>
     <MToolbarTitle Class="font-weight-bold"
