--- a/SwashbucklerDiary/Pages/Index/IndexDiary.razor
+++ b/SwashbucklerDiary/Pages/Index/IndexDiary.razor
@@ -1,5 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Pages
-@inherits ImportantComponentBase
+@inherits IndexPageCompentBase
 
 <MyAppBar>
     <MTabs @bind-Value="tab"
