--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
@@ -11,19 +11,22 @@
                 <MList>
                     @foreach (var item in DynamicListItems)
                     {
-                        <MListItem OnClick="()=>OnClick(item.OnClick)">
-                            <MListItemIcon>
-                                <MIcon>
-                                    @(item.Icon)
-                                </MIcon>
-                            </MListItemIcon>
-                            <MListItemContent>
-                                @(I18n.T(item.Text))
-                            </MListItemContent>
-                        </MListItem>
-                        if (DynamicListItems.Last() != item)
+                        @if (item.Show)
                         {
-                            <MDivider></MDivider>
+                            <MListItem OnClick="()=>OnClick(item.OnClick)">
+                                <MListItemIcon>
+                                    <MIcon>
+                                        @(item.Icon)
+                                    </MIcon>
+                                </MListItemIcon>
+                                <MListItemContent>
+                                    @(I18n.T(item.Text))
+                                </MListItemContent>
+                            </MListItem>
+                            if (DynamicListItems.Last() != item)
+                            {
+                                <MDivider></MDivider>
+                            }
                         }
                     }
                     <MListItem>
@@ -58,19 +61,22 @@
                 <MCardText>
                     @foreach (var item in DynamicListItems)
                     {
-                        <MListItem Class="px-0"
-                                   OnClick="()=>OnClick(item.OnClick)">
-                            <MListItemIcon Class="my-3">
-                                <MIcon Class="list-item-icon">
-                                    @(item.Icon)
-                                </MIcon>
-                            </MListItemIcon>
-                            <MListItemContent>
-                                <MListItemTitle>
-                                    @(I18n.T(item.Text))
-                                </MListItemTitle>
-                            </MListItemContent>
-                        </MListItem>
+                        @if (item.Show)
+                        {
+                            <MListItem Class="px-0"
+                                       OnClick="()=>OnClick(item.OnClick)">
+                                <MListItemIcon Class="my-3">
+                                    <MIcon Class="list-item-icon">
+                                        @(item.Icon)
+                                    </MIcon>
+                                </MListItemIcon>
+                                <MListItemContent>
+                                    <MListItemTitle>
+                                        @(I18n.T(item.Text))
+                                    </MListItemTitle>
+                                </MListItemContent>
+                            </MListItem>
+                        }
                     }
                 </MCardText>
             </MCard>
