--- a/SwashbucklerDiary/Shared/FirstLaunchDialog/FirstLaunchAgreement.razor
+++ b/SwashbucklerDiary/Shared/FirstLaunchDialog/FirstLaunchAgreement.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Components
+﻿@namespace SwashbucklerDiary.Shared
 
 <div class="@(ShowClass)" style="width:100%;max-width:480px;">
     <div class="text-h5 text-center mb-5" style="font-weight:700;">
