--- a/SwashbucklerDiary/Shared/FirstLaunchDialog/FirstLaunchLanguage.razor
+++ b/SwashbucklerDiary/Shared/FirstLaunchDialog/FirstLaunchLanguage.razor
@@ -1,7 +1,7 @@
-﻿@namespace SwashbucklerDiary.Components
+﻿@namespace SwashbucklerDiary.Shared
 
 <div class="@(ShowClass)" style="width:100%;max-width:420px;">
-    @foreach (var item in Languages)
+    @foreach (var item in I18n.Languages)
     {
         <MButton Class="mb-5"
                  Rounded="true"
