--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -11,12 +11,13 @@
 
             <MMain>
                 <PPageContainerExtension>
-                    <CascadingValue Value="@_options"
-                                    IsFixed="true">
-                        @Body
-                    </CascadingValue>
+                    @Body
                 </PPageContainerExtension>
             </MMain>
+
+            <MainLayoutBottomNavigation @bind-Value="NavigationIndex"
+                                        Items="NavigationButtons">
+            </MainLayoutBottomNavigation>
         </ChildContent>
 
         <ErrorContent>
