--- a/SwashbucklerDiary/Pages/Mine/MinePage.razor
+++ b/SwashbucklerDiary/Pages/Mine/MinePage.razor
@@ -63,7 +63,7 @@
                     <MListItemContent Class="justify-space-around text-center">
                         <div style="flex:unset">
                             <MListItemSubtitle>
-                                @(I18n.T("Mine.DiaryCount"))
+                                @(I18n.T("Statistics.DiaryCount"))
                             </MListItemSubtitle>
                             <MListItemTitle Class="mt-2 font-weight-bold text-h6">
                                 @DiaryCount
@@ -71,7 +71,7 @@
                         </div>
                         <div style="flex:unset">
                             <MListItemSubtitle>
-                                @(I18n.T("Mine.WordCount"))
+                                @(I18n.T("Statistics.WordCount"))
                             </MListItemSubtitle>
                             <MListItemTitle Class="mt-2 font-weight-bold text-h6">
                                 @WordCount
@@ -79,7 +79,7 @@
                         </div>
                         <div style="flex:unset">
                             <MListItemSubtitle>
-                                @(I18n.T("Mine.ActiveDayCount"))
+                                @(I18n.T("Statistics.ActiveDayCount"))
                             </MListItemSubtitle>
                             <MListItemTitle Class="mt-2 font-weight-bold text-h6">
                                 @ActiveDayCount
