--- a/SwashbucklerDiary/Components/MyComponents/LocationCard/LocationCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationCard/LocationCardList.razor
@@ -1,16 +1,31 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits MyComponentBase
 
-<div class="my-card-list">
-    <CascadingValue Value="this"
-                    IsFixed="true">
-        @foreach (var item in Value)
-        {
-            <LocationCard @key="item.Id"
-                          Value="item">
-            </LocationCard>
-        }
-    </CascadingValue>
+<div class="card-list-wrap">
+    <div class="card-list-main">
+        <CascadingValue Value="this"
+                        IsFixed="true">
+            <Virtualize Items="Value"
+                        ItemSize="60"
+                        Context="item">
+                <LocationCard @key="item.Id"
+                              Value="item">
+                </LocationCard>
+            </Virtualize>
+        </CascadingValue>
+    </div>
+
+    @if (Value.Any())
+    {
+        <MultiDisplay Tablet="true">
+            <DesktopContent>
+                <div class="card-list-assist-info">
+                    <LocationStatisticsCard Locations="Value">
+                    </LocationStatisticsCard>
+                </div>
+            </DesktopContent>
+        </MultiDisplay>
+    }
 </div>
 
 @if (!Value.Any())
