--- a/SwashbucklerDiary/Components/MyComponents/ImageResourceCard/ImageResourceCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ImageResourceCard/ImageResourceCardList.razor
@@ -31,7 +31,9 @@
 
 </div>
 
-<NotFound Show="!Value.Any()" Text="@(I18n.T("Setting.Display.Diary.Image.NoImage"))"></NotFound>
+<EmptyContent Show="!Value.Any()"
+              Text="@(I18n.T("Setting.Display.Diary.Image.NoImage"))">
+</EmptyContent>
 
 <PreviewImageDialog @bind-Value="ShowPreview"
                     Src="@PreviewImageSrc">
