--- a/SwashbucklerDiary/Components/MyComponents/MarkdownPreview/MarkdownPreviewContent.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MarkdownPreview/MarkdownPreviewContent.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div @ref="element" class="@Class" style="@Style">
+<div @ref="element" class="@($"user-select {Class}")" style="@Style">
 </div>
 
 <PreviewImageDialog @bind-Value="ShowPreviewImage"
