--- a/SwashbucklerDiary/Pages/Mine/About/SponsorPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/SponsorPage.razor
@@ -7,10 +7,10 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="mb-5"
+    <MCard Class="mb-5 user-select"
            Elevation="0"
            Rounded="@("lg")">
-        <MCardTitle Class="text-h5 font-weight-bold mb-5" Style="justify-content:center;">
+        <MCardTitle Class="text-h5 font-weight-bold py-sm-10" Style="justify-content:center;">
             @(I18n.T("Sponsor.Introduce.Title"))
         </MCardTitle>
         <MCardText Style="text-indent: 2em;">
