--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -109,7 +109,7 @@
         @if (Markdown)
         {
             <MarkdownPreview Value="@(Diary.Content)"
-                             Class="my-sm-4 px-3 user-select"
+                             Class="my-sm-4 px-3"
                              Style="padding-top:10px">
             </MarkdownPreview>
         }
