--- a/SwashbucklerDiary/Pages/SearchAppFunctionPage.razor
+++ b/SwashbucklerDiary/Pages/SearchAppFunctionPage.razor
@@ -45,6 +45,6 @@
         }
     }
 
-    <NotFound Show="!AppFunctions.Any()"></NotFound>
+    <EmptyContent Show="!AppFunctions.Any()"></EmptyContent>
 
 </ScrollContainer>
