--- a/SwashbucklerDiary/Pages/Mine/Achievement/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Achievement/AchievementPage.razor
@@ -32,5 +32,5 @@
         }
     </div>
 
-    <NotFound Show="!string.IsNullOrEmpty(Search)"></NotFound>
+    <EmptyContent Show="!string.IsNullOrEmpty(Search)"></EmptyContent>
 </ScrollContainer>
