--- a/SwashbucklerDiary/Components/DialogComponents/ExportDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/ExportDialog.razor
@@ -1,8 +1,8 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MultiDialog Value="Value"
+<MultiListDialog Value="Value"
              ValueChanged="ValueChanged"
              Title="@(I18n.T("Export.Export.SelectType"))"
              DynamicListItems="Items">
-</MultiDialog>
+</MultiListDialog>
