--- a/SwashbucklerDiary/Pages/Mine/About/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/AboutPage.razor
@@ -66,10 +66,10 @@
 
 </ScrollContainer>
 
-<MultiDialog @bind-Value="ShowSourceCode"
+<MultiListDialog @bind-Value="ShowSourceCode"
              Title="@(I18n.T("About.SourceCode.Name"))"
              DynamicListItems="CodeSourceListItems">
-</MultiDialog>
+</MultiListDialog>
 
 <MDialogExtension @bind-MyValue="ShowVersionUpdate"
                   ContentClass="rounded-lg"
